// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RequestList should execute requests by alias. 1`] = `
Object {
  "body": "{\\"hello\\": \\"world\\"}",
  "request": Object {
    "body": Object {
      "lastname": "Diaz",
      "name": "David",
    },
    "endpoint": "http://martianwabbit.com/user",
    "headers": undefined,
  },
  "response": Object {
    "body": "{\\"hello\\": \\"world\\"}",
    "headers": Array [],
    "status": 200,
  },
}
`;

exports[`RequestList should fetch dependencies 1`] = `
RequestCache {
  "$cache": Object {
    "env": Object {
      "environmental": true,
    },
    "get-posts": Object {
      "body": "{\\"hello\\": \\"world\\"}",
      "request": Object {
        "body": undefined,
        "endpoint": "http://martianwabbit.com/post",
        "headers": undefined,
      },
      "response": Object {
        "body": "{\\"hello\\": \\"world\\"}",
        "headers": Array [],
        "status": 200,
      },
    },
  },
}
`;
